@@ -1,16 +1,16 @@
 Package: basefun
 Title: Infrastructure for Computing with Basis Functions
-Version: 0.0-38
-Date: 2017-05-15
+Version: 0.0-39
+Date: 2017-12-18
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
-                  email = "Torsten.Hothorn@R-project.org")  
+                  email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))  
 Description: Some very simple infrastructure for basis functions.
 Depends: variables (>= 0.0-30)
 Imports: stats, polynom, Matrix, orthopolynom, methods
 License: GPL-2
 NeedsCompilation: yes
-Packaged: 2017-05-17 09:35:30 UTC; hothorn
-Author: Torsten Hothorn [aut, cre]
+Packaged: 2017-12-18 12:38:57 UTC; hothorn
+Author: Torsten Hothorn [aut, cre] (0000-0001-8301-0471)
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
 Repository: CRAN
-Date/Publication: 2017-05-17 14:07:12 UTC
+Date/Publication: 2017-12-18 19:07:06 UTC
