@@ -1,25 +1,27 @@
-b83b5d32b959f4fd8468137b69ea94be *DESCRIPTION
-2af1830d90cb13e54f905f5293dead84 *NAMESPACE
+09c77a4968568bf0560cb8a378e27957 *DESCRIPTION
+0a2bb0178f79e778b44d05e7895e4e55 *NAMESPACE
 5f993b6d2ba607402321c21481a824a5 *R/bernstein.R
 3126d7ad938777a2f05214a714d0e00f *R/box_bases.R
 e29be446cc3f19e171e814ac61caefbc *R/cbind_bases.R
 dfaa6e61ada2f5144c1952ffddde84a8 *R/cyclic.R
 30f02e4dc9b1807fcbab770c530efc9b *R/factor.R
 e3f0180f2400a1703b1aa56a57fd8045 *R/formula.R
+c053ad0299f51085a04195096215bfd7 *R/intercept.R
 725532e2af625944eb301eb3e3f73ae2 *R/kronecker.R
 d59c91433a5f923ac2067047511de586 *R/legendre.R
 296d080b37f4f8a3d10e0328a84ace9b *R/log.R
-3afb4d7d3b0ed46e3c29c0c8fd3c86bc *R/methods.R
+f53b63e9c370a1ce2951e44e91d1fec9 *R/methods.R
 306bc7ed8a1b3746a0e9af255ddcd37a *R/polynomial.R
 b28a85143635108a8a27f808ccc28eff *R/utils.R
 1c9695dee7162d6e72883b552906e753 *cleanup
-4c7075c66d81951d5324956aed970551 *inst/NEWS.Rd
+5262dc12837fe70368ef89c237c47c96 *inst/NEWS.Rd
 8cb66017e7b800b4a368f0b658049816 *man/Bernstein_basis.Rd
 e302699142ee0fef7062985a604afd3d *man/Legendre_basis.Rd
 e346889cf14daf60e656a13dd60ac16a *man/as.basis.formula.Rd
 c736c39ccebe13232980b91e33670172 *man/b.Rd
 fb7f5716b30d97a2b8e1116dc2a11096 *man/basefun-package.Rd
 fd29262aeecbb02e20c43c2ee3af8dd0 *man/c.Rd
+4bad1335984b7c9744f5cceed9f753f6 *man/intercept_basis.Rd
 057b7303af0782a069cbc2be5d389651 *man/log_basis.Rd
 04a1b17dfa62a222a95b0afa7cbae7d9 *man/polynomial_basis.Rd
 3902408a3e92e480bc73654bdc99f564 *man/predict.Rd
